# FraudShield

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: README.md  app.py  pyproject.toml
backend/src/fraudshield/: __init__.py
backend/src/fraudshield/api/: main.py
backend/src/fraudshield/core/: settings.py  workflow.py
backend/src/fraudshield/data/: db.py
backend/src/fraudshield/decisioning/: engine.py
backend/src/fraudshield/governance/: audit.py  events.py
backend/src/fraudshield/modeling/: registry.py  scoring.py  train_supervised.py
backend/src/fraudshield/monitoring/: drift.py  kpis.py  performance.py
backend/src/fraudshield/ops/: investigation.py
backend/src/fraudshield/tools/: enrichment.py
backend/src/fraudshield/util/: jsonx.py
backend/tests/unit/: test_decision_engine.py  test_kpis_shape.py  test_pii_redaction.py
docs/architecture/: decisioning.md
docs/runbooks/: production_readiness.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
